--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,9 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
+    - python: pypy3.5-7.0
+      dist: xenial
+      sudo: true
 
 before_install:
   # prepare the system to install prerequisites or dependencies
