Test Py 3.8 on macos

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,10 @@ matrix:
     - os: osx
       language: generic
       env: TRAVIS_PYTHON_VERSION=3.7
+    - os: osx
+      osx_image: xcode11
+      language: generic
+      env: TRAVIS_PYTHON_VERSION=3.8-dev
     - python: 3.5
     - python: 3.6
     - python: 3.7
