--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,21 +10,21 @@ environment:
     CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\tools\\appveyor\\run_with_env.cmd"
 
   matrix:
-#    - PYTHON: "C:\\Python35"
-#      PYTHON_VERSION: "3.5.3"
-#      PYTHON_ARCH: "32"
-#
-#    - PYTHON: "C:\\Python35-x64"
-#      PYTHON_VERSION: "3.5.3"
-#      PYTHON_ARCH: "64"
-#
-#    - PYTHON: "C:\\Python36"
-#      PYTHON_VERSION: "3.6.6"
-#      PYTHON_ARCH: "32"
-#
-#    - PYTHON: "C:\\Python36-x64"
-#      PYTHON_VERSION: "3.6.6"
-#      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python35"
+      PYTHON_VERSION: "3.5.3"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.5.3"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python36"
+      PYTHON_VERSION: "3.6.6"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python36-x64"
+      PYTHON_VERSION: "3.6.6"
+      PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Python37"
       PYTHON_VERSION: "3.7.0"
