Test Python 3.8 with AppVeyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,6 +34,14 @@ environment:
       PYTHON_VERSION: "3.7.0"
       PYTHON_ARCH: "64"
 
+    - PYTHON: "C:\\Python38"
+      PYTHON_VERSION: "3.8.0"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python38-x64"
+      PYTHON_VERSION: "3.8.0"
+      PYTHON_ARCH: "64"
+
 install:
   # Install Python (from the official .msi of http://python.org) and pip when
   # not already installed.
