--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ matrix:
       osx_image: xcode7.3
       language: generic
       env:
-      - TRAVIS_PYTHON_VERSION=3.6.1
+      - TRAVIS_PYTHON_VERSION=3.6
       - OPTIONAL_DEPS=1
       - OSX_PKG_ENV=miniconda
     - os: osx
@@ -56,10 +56,10 @@ matrix:
     - os: osx
       osx_image: xcode11
       language: generic
-      env: TRAVIS_PYTHON_VERSION=3.8-dev
+      env: TRAVIS_PYTHON_VERSION=3.8
     - python: 3.5
     - python: 3.6
-    - python: 3.8-dev
+    - python: 3.8
     - python: pypy3.6-7.1.1
 
 before_install:
