--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,12 @@ matrix:
     - os: osx
       language: generic
       env: TRAVIS_PYTHON_VERSION=3.7
+      cache:
+        # As for now travis caches only "$HOME/.cache/pip"
+        # https://docs.travis-ci.com/user/caching/#pip-cache
+        pip: false
+        directories:
+          - $HOME/Library/Caches/pip
     - os: osx
       osx_image: xcode11
       language: generic
