--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -5,3 +5,4 @@ flake8:
     max-line-length: 100  # Default is 79 in PEP 8
     ignore:  # Errors and warnings to ignore
         - E402  # module level import not at top of file
+        - W503  # newline before binary operator
