--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,4 @@
 [run]
 branch = True
 source = networkx
-omit = */tests/*, *release.py, *testing/test.py
+omit = */tests/*, conftest.py, *release.py, *testing/test.py
