--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,20 @@ matrix:
       python: 3.7
       env:
       - OPTIONAL_DEPS=1
+      - BUILD_DOCS=1
+      - DEPLOY_DOCS=1
+      addons:
+        apt:
+          packages:
+          - libgdal-dev
+          - graphviz
+          - texlive
+          - texlive-latex-extra
+          - latexmk
+    - os: linux
+      python: 3.7
+      env:
+      - OPTIONAL_DEPS=1
       - PIP_FLAGS="--pre"
       addons:
         apt:
