Update Knuth miles example. (#4251)
* MAINT: replace hard-coded print with print(G).

Take advantage of more descriptive G.__str__.

* WIP: get example working with cartopy

* WIP: Make knuth example work with or without cartopy

* CI: cherrypick CI setup from #4250

* Add country boundaries to knuth example.

Adds Canada and Mexico map boundaries so that the Canadian
cities are not floating in negative space

* Slightly better figure aspect.

* Reduce linewidth for paths between cities.

Provides a little more contrast with the map borders.

* Add warnings filter to ignore cartopy warnings

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,11 @@ jobs:
             sudo apt-get install texlive texlive-latex-extra latexmk
 
       - run:
+          name: Install cartopy dependencies
+          command: |
+            sudo apt-get install libgeos-dev libproj-dev
+
+      - run:
           name: Install Python dependencies
           command: |
             python3 -m venv venv
@@ -33,7 +38,8 @@ jobs:
             pip install --upgrade pip wheel setuptools
             pip install -r requirements.txt
             pip install -r requirements/doc.txt
-            pip install pydot pygraphviz
+            pip install -r requirements/extra.txt
+            pip install -r requirements/example.txt
 
       - run:
           name: Install
