Update homepage URL (#4285)
* Update homepage URL

* Using Ross's suggestion from PR #4258

* Use https

* Fix NXEP link

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -116,6 +116,6 @@ docs: clean html latexpdf
 
 gitwash-update:
 	python ../tools/gitwash_dumper.py developer networkx \
-	--project-url=http://networkx.github.io \
-	--project-ml-url=http://groups.google.com/group/networkx-discuss/ \
+	--project-url=https://networkx.org \
+	--project-ml-url=https://groups.google.com/group/networkx-discuss/ \
 	--gitwash-url git@github.com:matthew-brett/gitwash.git
