Enable mayavi in sphinx gallery. (#4297)
* Enable mayavi in sphinx gallery.

* Add mayavi deps to example requirements.

* Install vtk before mayavi

* Don't popup Mayavi windows

* Display offscreen

* Borrow mayavi CI conf from sphinx-gallery

 * Grab dependencies as specified in sphinx-gallery conf.
 * Set up virtual frame buffer so mayavi can import/run headless.

Co-authored-by: Jarrod Millman <jarrod.millman@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,17 @@ jobs:
           name: Install pysal dependencies
           command: |
             sudo apt-get install libspatialindex-dev
+      
+      - run:
+          name: Install mayavi dependencies
+          command : |
+            sudo apt-get --no-install-recommends install -y libxkbcommon-x11-0 optipng libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 xcb libxcb-xfixes0 libxcb-xinerama0 libxcb-shape0
+
+      - run:
+          name: Configure for headless mayavi
+          command: |
+            echo "export DISPLAY=:99" >> $BASH_ENV
+            /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x200x24 -ac +extension GLX +render -noreset;
 
       - run:
           name: Install Python dependencies
