CI: Add mayavi conf to travis and GH for doc deploy (#4354)
* Add mayavi headless to travis and gh-action doc deploy workflows

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,16 @@ matrix:
           - libgeos-dev
           - libproj-dev
           - libspatialindex-dev
+          - libxkbcommon-x11-0
+          - optipng
+          - libxcb-icccm4
+          - libxcb-image0
+          - libxcb-keysyms1
+          - libxcb-randr0
+          - libxcb-render-util0
+          - xcb libxcb-xfixes0
+          - libxcb-xinerama0
+          - libxcb-shape0
 
 before_install:
   # prepare the system to install prerequisites or dependencies
