--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,6 +27,12 @@ jobs:
         python3 -m venv ~/venv
         source ~/venv/bin/activate
 
+    - name: Mayavi setup
+      run: |
+        sudo apt-get --no-install-recommends install -y libxkbcommon-x11-0 optipng libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 xcb libxcb-xfixes0 libxcb-xinerama0 libxcb-shape0
+        echo "export DISPLAY=:99" >> $BASH_ENV
+        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x200x24 -ac +extension GLX +render -noreset;
+
     - name: Install packages
       run: |
         pip install --upgrade pip wheel setuptools
