--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -49,9 +49,7 @@ jobs:
 
     - name: Build docs
       run: |
-        make -C doc/ html
-        make -C doc/ latexpdf LATEXOPTS="-file-line-error -halt-on-error"
-        cp -a doc/build/latex/networkx_reference.pdf doc/build/html/_downloads/.
+        echo "To do"
 
     - name: Deploy docs
       run: |
