--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
             pip install -r requirements/example-requirements.txt
             pip install -r requirements/example.txt
             pip install -U -r requirements/doc.txt
+            pip list
 
       - run:
           name: Install
