--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - run:
           name: Install TeX
           command: |
-            sudo apt-get install texlive texlive-latex-extra latexmk
+            sudo apt-get install texlive texlive-latex-extra latexmk texlive-xetex fonts-freefont-otf xindy
 
       - run:
           name: Install cartopy dependencies
