CI: Workaround font naming bug. (#4416)
See: https://bugs.launchpad.net/ubuntu/+source/texlive-base/+bug/556071

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ matrix:
           - texlive-latex-extra
           - latexmk
           - texlive-xetex
-          - texlive-fonts-recommended
           - fonts-freefont-otf
           - xindy
+          - lmodern
           - libgeos-dev
           - libproj-dev
           - libspatialindex-dev
