Update geospatial readme (#4417)
Co-authored-by: Brendan Ward <bcward@astutespruce.com>
Co-authored-by: Martin Fleischmann <martin@martinfleischmann.net>
Co-authored-by: Geoff Boeing <gboeing@users.noreply.github.com>
Co-authored-by: Ross Barnowski <rossbar@berkeley.edu>

Co-authored-by: Brendan Ward <bcward@astutespruce.com>
Co-authored-by: Martin Fleischmann <martin@martinfleischmann.net>
Co-authored-by: Geoff Boeing <gboeing@users.noreply.github.com>
Co-authored-by: Ross Barnowski <rossbar@berkeley.edu>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -43,6 +43,8 @@ dist: html
 	(cd build/dist && tar czf ../dist.tar.gz .)
 
 html:
+	mkdir -p auto_examples/geospatial/
+	cp ../examples/geospatial/extended_description.rst auto_examples/geospatial/
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) build/html
 	@echo
 	@echo "Build finished. The HTML pages are in build/html."
