CI: persist pip cache between circleci runs (#4714)
* CI: persist pip cache between circleci runs

Currently, the pip install stop of the docs build job on circleci
takes ~2min due to the need to build some wheels locally.
This time-consuming step could be significantly improved by
persisting the pip cache between CI runs.

* Fix indentation error in config file.

* Update config.yml

Use next-gen circleci images for faster spin-up time and improved reliability:
https://circleci.com/docs/2.0/circleci-images/?section=executors-and-images

* circleci docker img back down to python 3.8.

* xvfb not included in cimg by default.

Co-authored-by: Jarrod Millman <jarrod.millman@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/python:3.8.5-buster
+      - image: cimg/python:3.8
 
     steps:
       - checkout
@@ -38,7 +38,7 @@ jobs:
       - run:
           name: Install mayavi dependencies
           command : |
-            sudo apt-get --no-install-recommends install -y libxkbcommon-x11-0 optipng libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 xcb libxcb-xfixes0 libxcb-xinerama0 libxcb-shape0
+            sudo apt-get --no-install-recommends install -y libxkbcommon-x11-0 optipng libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 xcb libxcb-xfixes0 libxcb-xinerama0 libxcb-shape0 xvfb
 
       - run:
           name: Configure for headless mayavi
@@ -46,18 +46,27 @@ jobs:
             echo "export DISPLAY=:99" >> $BASH_ENV
             /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x200x24 -ac +extension GLX +render -noreset;
 
+      - restore_cache:
+          keys:
+            - pip-cache-v1
+
       - run:
           name: Install Python dependencies
           command: |
             python3 -m venv venv
             source venv/bin/activate
             pip install --upgrade pip wheel setuptools
-            pip install -r requirements.txt
-            pip install -r requirements/extra.txt
-            pip install -r requirements/example-requirements.txt
-            pip install -r requirements/example.txt
+            pip install -U -r requirements.txt
+            pip install -U -r requirements/extra.txt
+            pip install -U -r requirements/example-requirements.txt
+            pip install -U -r requirements/example.txt
             pip install -U -r requirements/doc.txt
             pip list
+
+      - save_cache:
+          key: pip-cache-v1
+          paths:
+            - ~/.cache/pip
 
       - run:
           name: Install
