Fix conda instructions (#4884)
* Fix conda instructions

* New idea

* fix to have conda avoid -r in requirements.txt and avoid ~=2.12 which is pip specific

* Hopefully fix macos pypy loading

* try again without wheel?

* Avoid dependencies on PyPy

Co-authored-by: Dan Schult <dschult@colgate.edu>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,8 +48,8 @@ jobs:
     - name: Install packages
       run: |
         pip install --upgrade pip wheel setuptools
-        pip install -r requirements.txt
-        pip install .
+        pip install -r requirements/test.txt
+        pip install decorator . --no-deps
         pip list
 
     - name: Test NetworkX
