--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,16 +22,13 @@ jobs:
     - name: Before install
       run: |
         sudo apt-get update
-        sudo apt-get install libgdal-dev graphviz graphviz-dev
+        sudo apt-get install graphviz graphviz-dev
 
     - name: Install packages
       run: |
         pip install --upgrade pip wheel setuptools
         pip install -r requirements/default.txt -r requirements/test.txt
         pip install -r requirements/extra.txt
-        export CPLUS_INCLUDE_PATH=/usr/include/gdal
-        export C_INCLUDE_PATH=/usr/include/gdal
-        pip install gdal==3.0.4
         pip install .
         pip list
 
