--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,30 @@ on: [push, pull_request]
 
 jobs:
 
+  base:
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      matrix:
+        os: [ubuntu, macos, windows]
+        python-version: ['pypy-3.8', '3.11-dev']
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install packages
+      run: |
+        python -m pip install --upgrade pip wheel setuptools
+        python -m pip install -r requirements/test.txt
+        python -m pip install .
+        python -m pip list
+
+    - name: Test NetworkX
+      run: |
+        pytest --durations=10 --pyargs networkx
+
   default:
     runs-on: ${{ matrix.os }}-latest
     strategy:
@@ -27,30 +51,6 @@ jobs:
     - name: Test NetworkX
       run: |
         pytest --doctest-modules --durations=10 --pyargs networkx
-
-  pypy:
-    runs-on: ${{ matrix.os }}-latest
-    strategy:
-      matrix:
-        os: [ubuntu, macos]
-        python-version: ['pypy-3.8']
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install packages
-      run: |
-        pip install --upgrade pip wheel setuptools
-        pip install -r requirements/test.txt
-        pip install .
-        pip list
-
-    - name: Test NetworkX
-      run: |
-        pytest --durations=10 --pyargs networkx
 
   extra:
     runs-on: ${{ matrix.os }}
