Remove stuff conda doesn't support (#5361)
* Remove stuff conda doesn't support

* Add note so we don't forget why we did this

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ jobs:
             source venv/bin/activate
             pip install --upgrade pip wheel setuptools
             pip install -r requirements/default.txt -r requirements/test.txt
+            pip install pytest-mpl  # NOTE: specified here to avoid confusing conda
             pip list
 
       - run:
