--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,10 +8,10 @@ on:
 
 jobs:
   report:
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: ["3.10"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
