--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -10,14 +10,14 @@ jobs:
     # Do not attempt to deploy documentation on forks
     if: github.repository_owner == 'networkx'
 
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.8'
+        python-version: '3.10'
 
     - name: Before install
       run: |
