Add workaround for pytest failures on 3.11-beta2 (#5680)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,9 @@ jobs:
 
     - name: Test NetworkX
       run: |
-        pytest --durations=10 --pyargs networkx
+        # NOTE: --assert=plain necessary to work around known pytest issue.
+        # See pytest-dev/pytest#10008
+        pytest --durations=10 --pyargs --assert=plain networkx
 
   default:
     runs-on: ${{ matrix.os }}-latest
