Revert "Add workaround for pytest failures on 3.11b2" (#5717)
Revert "Add workaround for pytest failures on 3.11-beta2 (#5680)"

This reverts commit 4564a7b9f5cafef7ec192ab50df0ec6a2ec8745c.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,7 @@ jobs:
 
     - name: Test NetworkX
       run: |
-        # NOTE: --assert=plain necessary to work around known pytest issue.
-        # See pytest-dev/pytest#10008
-        pytest --durations=10 --pyargs --assert=plain networkx
+        pytest --durations=10 --pyargs networkx
 
   default:
     runs-on: ${{ matrix.os }}-latest
